Sun 20 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * test/{t_factors,t_fuzzy,t_htsearch,t_parsing,t_templates,t_validwords},
    * test/test_functions.in:
      Make as many tests as possible work without apache/httpd by using
      local_urls.

    * test/url.cc, test/url.parents, test/url.children, test/url.output:
      Add test for allow_space_in_url.

Sat 19 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htsearch/Display.{cc,h}, htcommon/defaults.cc, htdoc/attrs.html.in,
      installdir/htdig.conf:
      Provide scrolling list of page numbers.
      Implements RFE #601177, #600959, #405679

Sat 19 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htsearch/htsearch.cc (setupWords), htsearch/parser.cc (phrase):
      Don't treat boolean_keywords in phrases as special.
      With patch of 11 June, no endless loop, but searches fail.

Mon 14 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htdig/Retriever.cc:
      Don't check for interrupt between popping a URL and processing it,
      so that url_log (db.log) truly contains all URLs seen but not processed.

Mon Jun 14 10:08:01 CEST 2004 Gabriele Bartolini <angusgb at users.sourceforge.net>

    * Tagged release htdig-3-2-0b6

Sun 13 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * db/os_abs.c, (db/os_abs.c.win32 removed):
      Re-fix Cygwin bug (#814268, fixed 25 Apr) so that it won't be
      clobbered by autotools.

Sat 12 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htdoc/RELEASE.html: Separated bug fixes from new features

    * htdoc/{htdig,htfuzzy}.html, installdir/{htdig,htfuzzy}.1.in:
      Added list of database files used

    * htdoc/{htdump,htmerge,htnotify,htpurge,hts_general,htstat,rundig}.html:
      Hyperlinked COMMON_DIR, BIN_DIR, DATABASE_DIR to attrs.html.

    * htcommon/defaults.cc, htdoc/attrs.html.in:
      Remove reference to deprecated '-l' option (generate URL log) of htdig.
